--- a/panel/src/app/campaign/listcampaign/listcampaign.component.html
+++ b/panel/src/app/campaign/listcampaign/listcampaign.component.html
@@ -68,8 +68,8 @@
                   <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
                   <mat-cell *matCellDef="let row">
                       <!--<action [label]="'Edit'" [icon]="'fas fa-pencil-alt fa-fw'" [data]=row (onClick)="EditDetail()"></action>-->
-                      <button mat-icon-button color="primary" (click)="Edit(row)"><mat-icon>edit</mat-icon></button>
-                      <button mat-icon-button color="primary" (click)="Delete(row,  row.id)"><mat-icon>delete</mat-icon></button>
+                      <button mat-icon-button  (click)="Edit(row)"><mat-icon>edit</mat-icon></button>
+                      <button mat-icon-button  (click)="Delete(row,  row.id)"><mat-icon>delete</mat-icon></button>
                   </mat-cell>
                 </ng-container> 
 
