--- a/panel/src/app/did/add-did/add-did.component.html
+++ b/panel/src/app/did/add-did/add-did.component.html
@@ -1,54 +1,58 @@
 
-<div fxLayout="row" fxLayoutWrap="wrap">
-  <div fxFlex.gt-sm="100" fxFlex="100">
+
       <mat-card>
           <mat-card-content>
               <!-- Message Form -->
-              <mat-card-title>Add DID</mat-card-title>
+           
               <form class="basic-form" (ngSubmit)="onSubmit()"  #AddDIDForm="ngForm">
-                  <div fxLayout="row" fxLayoutWrap="wrap">
-
-                      <div fxFlex.gt-sm="100" fxFlex="100">
-                          <mat-form-field>
-                            <input matInput placeholder="Enter Did" [(ngModel)]="cdata.number" id="number"  name="number">
-                          </mat-form-field>
-                        </div>
-
-                      <div fxFlex.gt-sm="100" fxFlex="100">
-                          <mat-form-field  *ngIf="foundsupplier">
-                            <mat-select placeholder="Select Supplier" [(ngModel)]="cdata.idsupplier" name="idsupplier">
-                              <mat-option value="option">Select Supplier</mat-option>
-                              <mat-option *ngFor="let s of supplier" [value]="s.value">{{s.label}}</mat-option>
-                            </mat-select>
-                          </mat-form-field>
-                        </div>
-
-                     
-                        <div fxFlex.gt-sm="100" fxFlex="100">
-                            <mat-form-field  *ngIf="foundcustomer">
-                            <mat-select placeholder="Select Customer" [(ngModel)]="cdata.iduser" name="iduser">
-                              <mat-option value="option">Select Customer</mat-option>
-                               <mat-option *ngFor="let c of customer" [value]="c.id">{{c.username}}</mat-option>
-                             </mat-select>
-                         </mat-form-field>
+                    <mat-grid-list cols="2" rowHeight="100px">
+                            <mat-grid-tile  [colspan]="1">
+                                <div class="div-info">
+                                    <mat-form-field>
+                                        <input matInput placeholder="Enter Did" [(ngModel)]="cdata.number" id="number"  name="number">
+                                    </mat-form-field>
+                                 </div>
+                             </mat-grid-tile>
+                     <mat-grid-tile  [colspan]="1">
+                            <div class="div-info">
+                                <mat-form-field  *ngIf="foundsupplier">
+                                    <mat-select placeholder="Select Supplier" [(ngModel)]="cdata.idsupplier" name="idsupplier">
+                                    <mat-option value="option">Select Supplier</mat-option>
+                                    <mat-option *ngFor="let s of supplier" [value]="s.value">{{s.label}}</mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                             </div>
+                     </mat-grid-tile>
+                        <mat-grid-tile  [colspan]="1">
+                            <div class="div-info">
+                                <mat-form-field  *ngIf="foundcustomer">
+                                <mat-select placeholder="Select Customer" [(ngModel)]="cdata.iduser" name="iduser">
+                                <mat-option value="option">Select Customer</mat-option>
+                                <mat-option *ngFor="let c of customer" [value]="c.id">{{c.username}}</mat-option>
+                                </mat-select>
+                                </mat-form-field>
                             </div>
-                    
+                            </mat-grid-tile>
                      
-                            <div fxFlex.gt-sm="100" fxFlex="100">
-                                <mat-form-field  *ngIf="foundqueue">
-                                <mat-select placeholder="Select Queue " [(ngModel)]="cdata.queue_name" name="queue_name">
-                                  <mat-option value="option">Select Customer</mat-option>
-                                   <mat-option *ngFor="let q of queue" [value]="q.id">{{q.queue_name}}</mat-option>
-                                 </mat-select>
-                             </mat-form-field>
-                                </div>
-                           
-                            <div fxFlex.gt-sm="100" fxFlex="100">
-                        <button mat-raised-button color="primary" type="submit">Submit</button>
-                      </div>
-                  </div>
+                            <mat-grid-tile  [colspan]="1">
+                                    <div class="div-info">
+                                        <mat-form-field  *ngIf="foundqueue">
+                                        <mat-select placeholder="Select Queue " [(ngModel)]="cdata.queue_name" name="queue_name">
+                                        <mat-option value="option">Select Customer</mat-option>
+                                        <mat-option *ngFor="let q of queue" [value]="q.id">{{q.queue_name}}</mat-option>
+                                        </mat-select>
+                                         </mat-form-field>
+                                      </div>
+                                </mat-grid-tile>
+                                <mat-grid-tile  [colspan]="1">
+                                        <div class="div-info">
+                                        <div fxFlex.gt-sm="100" fxFlex="100">
+                                            <button mat-raised-button color="primary" type="submit">Submit</button>
+                                        </div>
+                                        </div>
+                                </mat-grid-tile>
+                        </mat-grid-list>
+                
               </form>
           </mat-card-content>
       </mat-card>
-  </div>
-</div>
