--- a/panel/src/app/did/list-did/list-did.component.html
+++ b/panel/src/app/did/list-did/list-did.component.html
@@ -28,8 +28,7 @@
                   <ng-container matColumnDef="actions">
                   <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
                   <mat-cell *matCellDef="let row">
-                     
-                      <button mat-raised-button color="primary" (click)="Delete(row,  row.id)">Delete</button>
+                      <button mat-icon-button  (click)="Delete(row,  row.id)"><mat-icon>delete</mat-icon></button>
                   </mat-cell>
                 </ng-container> 
   
