--- a/panel/src/app/leads/listleads/listleads.component.html
+++ b/panel/src/app/leads/listleads/listleads.component.html
@@ -71,8 +71,7 @@
                     <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
                     <mat-cell *matCellDef="let row">
                         <!--<action [label]="'Edit'" [icon]="'fas fa-pencil-alt fa-fw'" [data]=row (onClick)="EditDetail()"></action>-->
-                        
-                        <button mat-raised-button color="primary" (click)="Delete(row, row.id)">Delete</button>
+                        <button mat-raised-button  (click)="Delete(row,  row.id)"><mat-icon>delete</mat-icon></button>
                     </mat-cell>
                   </ng-container> 
 
