--- a/panel/src/app/supplier/listsupplier/listsupplier.component.html
+++ b/panel/src/app/supplier/listsupplier/listsupplier.component.html
@@ -30,8 +30,10 @@
               <ng-container matColumnDef="actions">
                   <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
                   <mat-cell *matCellDef="let row">
-                      <button mat-raised-button color="primary" (click)="Edit(row)">Edit</button>
-                      <button mat-raised-button color="primary" (click)="Delete(row, row.id)">Delete</button>
+
+                      <button mat-raised-button   (click)="Edit(row)"><mat-icon>edit</mat-icon></button>
+                      <button mat-raised-button  (click)="Delete(row,  row.id)"><mat-icon>delete</mat-icon></button>
+
                   </mat-cell>
                 </ng-container> 
 
